--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     ]
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "gatsby": "3.12.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-helmet": "^6.1.0",
     "tsconfig-paths-webpack-plugin": "3.5.1"
   },
   "devDependencies": {
@@ -62,9 +65,19 @@
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.24.0",
     "eslint-plugin-react-hooks": "4.2.0",
+    "gatsby-plugin-catch-links": "^3.12.0",
+    "gatsby-plugin-feed": "^3.12.0",
+    "gatsby-plugin-google-analytics": "^3.12.0",
+    "gatsby-plugin-manifest": "^3.12.0",
+    "gatsby-plugin-offline": "^4.12.0",
+    "gatsby-plugin-react-helmet": "^4.12.0",
+    "gatsby-plugin-sitemap": "^4.8.0",
+    "gatsby-source-filesystem": "^3.12.0",
+    "gatsby-transformer-remark": "^4.9.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "27.0.6",
     "lint-staged": "11.1.2",
+    "lodash": "^4.17.21",
     "prettier": "2.3.2",
     "ts-jest": "27.0.5",
     "typescript": "4.3.5"
