--- a/.eslintrc
+++ b/.eslintrc
@@ -82,7 +82,7 @@
         "quotes": "off",
         "@typescript-eslint/quotes": [
           2,
-          "backtick",
+          "single",
           {
             "avoidEscape": true
           }
