--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.4",
     "gatsby": "3.12.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
+    "styled-components": "^5.3.1",
     "tsconfig-paths-webpack-plugin": "3.5.1"
   },
   "devDependencies": {
