Base página inicial

--- a/.eslintrc
+++ b/.eslintrc
@@ -17,22 +17,33 @@
     "SharedArrayBuffer": "readonly"
   },
   "plugins": ["react", "react-hooks", "jsx-a11y", "prettier", "jest"],
-  "extends": ["plugin:react/recommended", "airbnb", "prettier", "plugin:jest/recommended", "plugin:jest/style"],
+  "extends": [
+    "plugin:react/recommended",
+    "airbnb",
+    "prettier",
+    "plugin:jest/recommended",
+    "plugin:jest/style"
+  ],
   "rules": {
     "jest/prefer-strict-equal": "error",
     "jest/prefer-to-have-length": "warn",
-    "prettier/prettier": "error",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
     "import/prefer-default-export": "off",
     "react/prop-types": "off",
     "react/jsx-filename-extension": "off",
     "react/jsx-props-no-spreading": "off",
     "import/no-extraneous-dependencies": [
-      "error", 
+      "error",
       {
         "devDependencies": [
-          "**/*.test.[jt]s", 
+          "**/*.test.[jt]s",
           "**/*.spec.[jt]s",
-          "**/*.test.[jt]sx", 
+          "**/*.test.[jt]sx",
           "**/*.spec.[jt]sx"
         ]
       }
@@ -69,12 +80,12 @@
         "@typescript-eslint/no-use-before-define": [1],
         "import/no-unresolved": 0,
         "import/no-extraneous-dependencies": [
-          "error", 
+          "error",
           {
             "devDependencies": [
-              "**/*.test.ts", 
+              "**/*.test.ts",
               "**/*.spec.ts",
-              "**/*.test.tsx", 
+              "**/*.test.tsx",
               "**/*.spec.tsx"
             ]
           }
