--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "type-check": "tsc",
     "lint": "eslint --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\"",
     "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --write",
-    "test": "jest"
+    "test": "jest",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "lint-staged": {
     "./src/**/*.{ts,js,jsx,tsx}": [
@@ -76,6 +77,7 @@
     "gatsby-plugin-sitemap": "^4.8.0",
     "gatsby-source-filesystem": "^3.12.0",
     "gatsby-transformer-remark": "^4.9.0",
+    "gh-pages": "^3.2.3",
     "identity-obj-proxy": "3.0.0",
     "jest": "27.0.6",
     "lint-staged": "11.1.2",
