--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.3.1",
-    "tsconfig-paths-webpack-plugin": "3.5.1"
+    "tsconfig-paths-webpack-plugin": "3.5.1",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@babel/preset-react": "7.14.5",
@@ -81,7 +82,6 @@
     "identity-obj-proxy": "3.0.0",
     "jest": "27.0.6",
     "lint-staged": "11.1.2",
-    "lodash": "^4.17.21",
     "prettier": "2.3.2",
     "ts-jest": "27.0.5",
     "typescript": "4.3.5"
