--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,9 +8,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2
+    steps:      
       - name: Checkout
-
+        uses: actions/checkout@v2
+        
       - name: Build and Deploy
         run: npm run deploy
