--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,5 +12,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         
-      - name: Build and Deploy
+      - name: Install
+        run: npm install
+        
+      - name: Build
+        run: npm run build
+        
+      - name: Deploy
         run: npm run deploy
