workflow: config git user

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         
+      - name: Config
+        run : |
+          git config --global user.email "alan_f_jantz@hotmail.com"
+          git config --global user.name "GitHub Pages"
+        
       - name: Install
         run: npm install
         
