--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,17 +11,9 @@ jobs:
     steps:      
       - name: Checkout
         uses: actions/checkout@v2
-        
-      - name: Config
-        run : |
-          git config --global user.email "alan_f_jantz@hotmail.com"
-          git config --global user.name "alanjantz"
-        
-      - name: Install
-        run: npm install
-        
-      - name: Build
-        run: npm run build
-        
+
       - name: Deploy
-        run: npm run deploy
+        uses: xmflsct/action-publish-gatsby@v1
+        with:
+          publishBranch: 'main'
+          token: ${{ secrets.TOKEN }}
