Ajuste nome script

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         run: yarn
 
       - name: Run tests
-        run: yarn tests
+        run: yarn test
 
       - name: Build
         run: yarn build
