--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "gatsby-starter-ts",
-  "description": "A TypeScript starter for Gatsby that includes all you need to build amazing projects",
+  "name": "komorebi",
+  "description": "Anime catalogue",
   "version": "1.0.0",
   "private": true,
-  "author": "João Pedro Schmitz <hey@joaopedro.dev> (https://joaopedro.dev)",
+  "author": "Alan Felipe Jantz <alan_f_jantz@hotmail.com> (https://alanjantz.dev)",
   "license": "MIT",
   "keywords": [
     "gatsby",
-    "starter",
-    "typescript"
+    "typescript",
+    "react"
   ],
   "scripts": {
     "start": "gatsby develop",
@@ -33,12 +33,12 @@
     "@material-ui/styles": "^4.11.4",
     "gatsby": "3.12.0",
     "gatsby-source-filesystem": "^3.12.0",
+    "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.3.1",
-    "tsconfig-paths-webpack-plugin": "3.5.1",
-    "lodash": "^4.17.21"
+    "tsconfig-paths-webpack-plugin": "3.5.1"
   },
   "devDependencies": {
     "@babel/preset-react": "7.14.5",
