--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,10 @@ jobs:
       - name: Run tests
         run: yarn test
 
-      - name: Build
-        run: yarn build
-
-      - name: Deploy
-        run: yarn run gh-pages -d public -b gh-pages -u 'Alan Jantz <alan_f_jantz@hotmail.com>' -m 'Deploy Gatsby Pages'
+      - name: Build and Deploy
+        uses: xmflsct/action-publish-gatsby@v1.0.0
+        with:
+          publishBranch: 'gh-pages'
+          token: ${{ secrets.TOKEN }}
+          name: 'Alan Jantz'
+          email: 'alan_f_jantz@hotmail.com'
