Ajuste nome workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: GitHub Pages Deploy
+name: Application Build
 
 on:
   push:
@@ -17,6 +17,6 @@ jobs:
 
       - name: Build
         run: yarn build
-        
+
       - name: Run tests
         run: yarn test
