--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Application Build
+name: Application Build and Deploy
 
 on:
   push:
@@ -20,3 +20,10 @@ jobs:
 
       - name: Run tests
         run: yarn test
+
+      - name: Deploy
+        uses: enriikke/gatsby-gh-pages-action@v2.2.0
+        with:
+          access-token: ${{ secrets.TOKEN }}
+          deploy-branch: gh-pages
+          gatsby-args: --prefix-paths
