--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint": "eslint --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\"",
     "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --write",
     "test": "jest",
+    "test:coverage": "jest --coverage --watchAll false",
     "deploy": "gh-pages -d public -b gh-pages"
   },
   "lint-staged": {
