Run code coverage on build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,5 +16,5 @@ jobs:
       - name: Build
         run: yarn build
 
-      - name: Run tests
-        run: yarn test
+      - name: Run tests & coverage
+        run: yarn test:coverage
